# coffeShopApp

./: CMakeLists.txt  README.txt  main.cpp  matrice_testare.txt
Classes/: Barista.cpp  Barista.h  Client.cpp  Client.h  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Server.cpp  Server.h
Locations/Brasov/: employees.brasov.csv  orders.brasov.csv  stock.brasov.csv
Locations/Brasov/EN/: employees.brasov.csv  events.brasov.csv  stock.brasov.csv
Locations/Brasov/RO/: employees.ro.brasov.csv  orders.ro.brasov.csv  reports.ro.brasov.csv  stock.ro.brasov.csv
Locations/Bucharest/: employees.bucharest.csv  stock.bucharest.csv
Locations/Bucharest/EN/: employees.bucharest.csv  orders.bucharest.csv  stock.bucharest.csv
Locations/Bucharest/RO/: employees.ro.bucuresti.csv  orders.ro.bucuresti.csv  reports.ro.bucuresti.csv  stock.ro.bucuresti.csv
Locations/Cluj-Napoca/: orders.clujnapoca.csv
Locations/Cluj-Napoca/EN/: employees.clujnapoca.csv  reports.clujnapoca.csv  stock.clujnapoca.csv
Locations/Cluj-Napoca/RO/: employees.ro.clujnapoca.csv  orders.ro.clujnapoca.csv  stock.ro.clujnapoca.csv
Locations/Iasi/EN/: employees.iasi.csv  orders.iasi.csv  reports.iasi.csv  stock.iasi.csv
Locations/Iasi/RO/: employees.ro.iasi.csv  orders.ro.iasi.csv
Locations/Timisoara/: orders.timisoara.csv
Locations/Timisoara/EN/: employees.timisoara.csv  stock.timisoara.csv
Locations/Timisoara/RO/: employees.ro.timisoara.csv  orders.ro.timisoara.csv  reports.ro.timisoara.csv
Utils/: CSVHandler.cpp  CSVHandler.h  Utils.cpp
